--- a/GUI/GUI.html
+++ b/GUI/GUI.html
@@ -5,11 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GUI project</title>
-    <link rel="stylesheet.css" />
+    
+    <link rel="stylesheet" href="stylesheet.css">
+
 </head>
 <body>
     <div class="container">
-        <div class="inner-circle"></div>
+        <div class="outer-circle">
+        <div class="inner-circle">
+        <span class="text minute">01 :</span>
+        <span class="text sec">&nbsp;47 :</span>
+        <span class="text msec">&nbsp;97 </span>
+        </div>
     </div>
+    
+    <div class="button-wrapper">
+    <button class="button">Reset</button>
+    <button class="button">Play</button>
+    <button class="button">lap</button>
+    </div>
+</div>
+<ul class="laps">
+    <li class="lap-item">
+        <span class="number">#1</span>
+        <span class="time-stamp"> 01: 43 : 07 </span>
+    </li>
+</ul>
+</div>
 </body>
 </html>
